table layout fixes to prevent table from overflowing into about section. Kept layout the same as it was.

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -74,6 +74,7 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+
   h2 {
     text-align: left;
     font-weight: bold;
@@ -127,4 +128,15 @@
 
 .undescended-letter-size-image {
   height: 0.55em;
+}
+
+#pr-list {
+  table-layout: fixed;
+  margin-left: auto;
+  margin-right: auto;
+
+  .pr-url {
+    max-width: 285px;
+    word-wrap: break-word;
+  }
 }
